--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -68,6 +68,10 @@
                             </ul>
                         </li>
 
+                        <li sec:authorize="hasRole('ROLE_ADMIN') or hasRole('ROLE_EMPLOYEE')">
+                            <a class="dropdown-item" th:href="@{/products/show/deleted}">Show all deleted products</a>
+                        </li>
+
                     </ul>
                 </li>
                 <li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN') or hasRole('ROLE_EMPLOYEE')">
