--- a/src/main/resources/templates/product_edit.html
+++ b/src/main/resources/templates/product_edit.html
@@ -15,21 +15,38 @@
             <h2 class="mb-4 text-center">Edit product</h2>
             <form action="#" th:action="@{/products/edit}" th:object="${product}" method="post">
                 <input type="hidden" th:field="*{id}"/>
+                <input type="hidden" th:field="*{quantity}" th:value="${product.quantity}" id="actualQuantity">
                 <div class="form-group">
                     <label for="productName">Product name:</label>
-                    <input type="text" th:field="*{name}" th:value="${product.name}" class="form-control" id="productName">
+                    <input type="text" th:field="*{name}" th:value="${product.name}" class="form-control"
+                           id="productName">
                     <p class="text-danger" th:text="${name_too_short}"></p>
                 </div>
                 <div class="form-group">
                     <label for="productPrice">Product price:</label>
-                    <input type="number" th:field="*{price}" th:value="${product.price}" class="form-control" id="productPrice">
+                    <input type="number" th:field="*{price}" th:value="${product.price}" class="form-control"
+                           id="productPrice" step="0.01">
                     <p class="text-danger" th:text="${price_too_low}"></p>
                 </div>
                 <div class="form-group">
-                    <label for="productQuantity">Product quantity:</label>
-                    <input type="number" th:field="*{quantity}" th:value="${product.quantity}" class="form-control" id="productQuantity">
+                    <label for="productQuantity">Product quantity(RAW edit - not safe):</label>
+                    <input type="number" th:field="*{quantity}" th:value="${product.quantity}" class="form-control"
+                           id="productQuantity" disabled>
+                </div>
+
+                <div class="form-group mt-2">
+                    <label for="quantityChange">Modify Quantity:</label>
+                    <input type="number" class="form-control" id="quantityChange" name="quantityChange"
+                           placeholder="Positive or negative number to increase or decrease quantity"
+                           step="1">
                     <p class="text-danger" th:text="${quantity_too_low}"></p>
                 </div>
+
+                <div th:if="${success != null}" class="text-center mb-5 mt-5">
+                    <p class="text-success" th:text="${success}"></p>
+                    <a href="/products/show" class="btn btn-primary">Go Back to Products</a>
+                </div>
+
                 <div class="text-center">
                     <button type="submit" class="btn btn-secondary btn-lg">Save changes</button>
                 </div>
