--- a/src/main/resources/templates/product_view.html
+++ b/src/main/resources/templates/product_view.html
@@ -88,8 +88,10 @@
                 </div>
 
                 <div sec:authorize="hasRole('ROLE_ADMIN') or hasRole('ROLE_EMPLOYEE')">
-                    <a th:href="@{'/products/edit/' + ${product.id}}" class="btn btn-warning">Edit</a>
-                    <a th:href="@{'/products/delete?id=' + ${product.id}}" class="btn btn-danger">Delete</a>
+                    <a th:if="${!product.isDeleted}" th:href="@{'/products/edit/' + ${product.id}}" class="btn btn-warning">Edit</a>
+                    <a th:if="${!product.isDeleted}" th:href="@{'/products/delete?id=' + ${product.id}}" class="btn btn-danger">Delete</a>
+                    <!-- Show back to stock button if the product is deleted. The page uses the same form. No Edit button for now. TODO -->
+                    <a th:if="${product.isDeleted}" th:href="@{'/products/undelete?id=' + ${product.id}}" class="btn btn-danger">Add Back to Stock</a>
                 </div>
 
                 <div th:if="${stockNotEnoughError}" class="alert alert-danger">
