Modified the edit path in the form with all products

--- a/src/main/resources/templates/products_all.html
+++ b/src/main/resources/templates/products_all.html
@@ -116,7 +116,7 @@
                         <a th:href="@{'/products/show/' + ${product.id}}" class="btn btn-primary">Show more</a>
                     </div>
                     <div sec:authorize="hasRole('ROLE_ADMIN') or hasRole('ROLE_EMPLOYEE')">
-                        <a th:href="@{'/products/edit?id=' + ${product.id}}" class="btn btn-warning">Edit</a>
+                        <a th:href="@{'/products/edit/' + ${product.id}}" class="btn btn-warning">Edit</a>
                         <a th:href="@{'/products/delete?id=' + ${product.id}}" class="btn btn-danger">Delete</a>
                     </div>
                 </div>
