--- a/src/main/resources/templates/orders_single.html
+++ b/src/main/resources/templates/orders_single.html
@@ -32,7 +32,16 @@
             </span>
         </p>
 
-        <p class="fw-normal lead" sec:authorize="hasRole('ROLE_USER')">STATUS: <span class="text-primary ms-2" th:text="${order.status.name}"></span></p>
+        <p class="fw-normal lead" sec:authorize="hasRole('ROLE_USER')">STATUS: <span class="text-primary ms-2" th:text="${order.status.name}"></span>
+            <span th:if="${order.status.name == 'CANCELLED'}">
+                <span class="text-danger" th:if="${order.orderCancelDateTime != null}" th:text="'(' + ${#temporals.format(order.orderCancelDateTime, 'yyyy-MM-dd HH:mm:ss')} + ')'"></span>
+                <span class="text-danger" th:if="${order.orderCancelDateTime == null}">CANCELLED</span>
+            </span>
+            <span th:if="${order.status.name == 'DELIVERED'}">
+                <span class="text-success" th:if="${order.orderDeliveryDateTime != null}" th:text="'(' + ${#temporals.format(order.orderDeliveryDateTime, 'yyyy-MM-dd HH:mm:ss')} + ')'"></span>
+                <span class="text-success" th:if="${order.orderDeliveryDateTime == null}">DELIVERED</span>
+            </span>
+        </p>
 
         <div class="d-flex align-items-center" sec:authorize="hasRole('ROLE_ADMIN') or hasRole('ROLE_EMPLOYEE')">
             <p class="fw-normal lead">STATUS: </p>
