--- a/src/main/resources/templates/products_found.html
+++ b/src/main/resources/templates/products_found.html
@@ -7,51 +7,56 @@
 <title>Title</title>
 </head>
 <nav th:replace="~{fragments/navbar.html}"></nav>
+
 <body class="d-flex flex-column min-vh-100">
-<div class="container" th:unless="${not #lists.isEmpty(products)}">
-    <div class="row">
-        <div class="col text-center">
-            <p><h4>No results were found for "<span th:text=${searchString}></span>"!</h4></p>
-        </div>
-    </div>
-</div>
+<div class="col-6 container flex-grow-1 text-center">
 
-<div class="container" th:if="${not #lists.isEmpty(products)}">
-    <h3>Showing results for: <span th:text=${searchString}></span></h3>
-    <div class="row row-cols-1 row-cols-md-4">
-
-        <div class="col mb-4" th:each="product : ${products}">
-            <div class="card h-100 d-flex flex-column">
-
-                <a th:href="@{'/products/show/' + ${product.id}}" th:if="${product.imageLocation != null}">
-                    <img th:src="@{'/images/' + ${product.imageLocation}}"
-                         class="card-img-top img-fluid img-thumbnail"/>
-                </a>
-
-                <div class="card-body flex-grow-1 text-center">
-                    <a th:href="@{'/products/show/' + ${product.id}}" th:if="${product.name != null}">
-                        <h5 class="card-title" th:text="${product.name}">Product Name</h5>
-                    </a>
-                    <p class="card-text text-danger" th:text="${product.price +'лв.'}">Price: $0.00</p>
-                    </a>
-                </div>
-
-                <div class="card-footer">
-                    <a th:href="@{'/user/login'}" sec:authorize="isAnonymous()" class="btn btn-primary">Login to Add to
-                        Cart</a>
-                    <div sec:authorize="isAuthenticated()">
-                        <!--  TODO: add to basket - quantity 1 ->  /products/add_to_basket -->
-                        <a href="#" class="btn btn-primary">Add to cart</a>
-                    </div>
-                    <div sec:authorize="hasRole('ROLE_ADMIN') or hasRole('ROLE_EMPLOYEE')">
-                        <a th:href="@{'/products/edit?id=' + ${product.id}}" class="btn btn-warning">Edit</a>
-                        <a th:href="@{'/products/delete?id=' + ${product.id}}" class="btn btn-danger">Delete</a>
-                    </div>
-                </div>
+    <div class="container" th:unless="${not #lists.isEmpty(products)}">
+        <div class="row">
+            <div class="col text-center">
+                <p><h4>No results were found for "<span th:text=${searchString}></span>"!</h4></p>
             </div>
         </div>
     </div>
 
+    <div class="container" th:if="${not #lists.isEmpty(products)}">
+        <h3>Showing results for: <span th:text=${searchString}></span></h3>
+        <div class="row row-cols-1 row-cols-md-4">
+
+            <div class="col mb-4" th:each="product : ${products}">
+                <div class="card h-100 d-flex flex-column">
+
+                    <a th:href="@{'/products/show/' + ${product.id}}" th:if="${product.imageLocation != null}">
+                        <img th:src="@{'/images/' + ${product.imageLocation}}"
+                             class="card-img-top img-fluid img-thumbnail"/>
+                    </a>
+
+                    <div class="card-body flex-grow-1 text-center">
+                        <a th:href="@{'/products/show/' + ${product.id}}" th:if="${product.name != null}">
+                            <h5 class="card-title" th:text="${product.name}">Product Name</h5>
+                        </a>
+                        <p class="card-text text-danger" th:text="${product.price +'лв.'}">Price: $0.00</p>
+                        </a>
+                    </div>
+
+                    <div class="card-footer">
+                        <a th:href="@{'/user/login'}" sec:authorize="isAnonymous()" class="btn btn-primary">Login to Add
+                            to
+                            Cart</a>
+                        <div sec:authorize="isAuthenticated()">
+                            <!--  TODO: add to basket - quantity 1 ->  /products/add_to_basket -->
+                            <a href="#" class="btn btn-primary">Add to cart</a>
+                        </div>
+                        <div sec:authorize="hasRole('ROLE_ADMIN') or hasRole('ROLE_EMPLOYEE')">
+                            <a th:href="@{'/products/edit?id=' + ${product.id}}" class="btn btn-warning">Edit</a>
+                            <a th:href="@{'/products/delete?id=' + ${product.id}}" class="btn btn-danger">Delete</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
