--- a/src/main/resources/templates/register_employee.html
+++ b/src/main/resources/templates/register_employee.html
@@ -62,6 +62,13 @@
                         <p class="text-danger" th:text="${password_error != null} ? ${password_error}"></p>
                     </div>
                     <div class="form-group">
+                        <label for="jobType">Job Type:</label>
+                        <select th:field="*{jobType}" class="form-select" id="jobType">
+                            <option th:each="jobType : ${T(com.project.Onlineshop.Static.JobType).values()}"
+                                    th:if="${jobType.id != 0 and jobType.id != 1}" th:value="${jobType}" th:text="${#strings.replace(jobType.name(), '_', ' ')}"></option>
+                        </select>
+                    </div>
+                    <div class="form-group">
                         <label for="dateOfBirth">Date of Birth:</label>
                         <input type="date" th:field="*{dateOfBirth}" class="form-control" id="dateOfBirth">
                         <span class="text-danger" th:if="${#fields.hasErrors('dateOfBirth')}"
