--- a/src/main/resources/templates/employees_all.html
+++ b/src/main/resources/templates/employees_all.html
@@ -7,7 +7,7 @@
 
 
 <body class="d-flex flex-column min-vh-100">
-<div class="col-7 container flex-grow-1 mt-6 mb-7">
+<div class="col-8 container flex-grow-1 mt-7 mb-7">
     <h1> All employees </h1>
     </hr>
     <div class="row justify-content-center">
@@ -31,9 +31,13 @@
                 <td th:text="${employee.firstName}"></td>
                 <td th:text="${employee.lastName}"></td>
                 <td th:text="${employee.email}"></td>
-                <td th:text="${employee.salary}"></td>
                 <form th:action="@{/admin/updateEmployeeStatus}" method="post">
                     <input type="hidden" name="employeeId" th:value="${employee.id}" />
+                    <td>
+                        <input type="number" name="salary" th:if="${employee.salary != null}" th:value="${employee.salary}" placeholder="Enter salary" />
+                        <input type="number" th:if="${employee.salary == null}" name="salary" placeholder="Enter salary" />
+
+                    </td>
                     <td style="position: relative;">
                         <select name="employeeStatus">
                             <option value="true" th:selected="${employee.isEnabled} == true">Enabled</option>
