Now web security works properly, a bug was fixed where when "edit product form" was not changed but was tried to be saved was showing error. Now new registered employees will be displayed in red color in the employee list (for admins) to catch more attention

--- a/src/main/resources/templates/employees_all.html
+++ b/src/main/resources/templates/employees_all.html
@@ -25,7 +25,7 @@
             </tr>
             </thead>
             <tbody>
-            <tr th:each="employee : ${employees}">
+            <tr th:each="employee : ${employees}" th:class="${employee.salary == null} ? 'table-danger' : ''">
                 <td th:text="${employee.id}"></td>
                 <td th:text="${employee.username}"></td>
                 <td th:text="${employee.firstName}"></td>
