--- a/src/main/resources/templates/products_enable_deleted.html
+++ b/src/main/resources/templates/products_enable_deleted.html
@@ -9,22 +9,22 @@
 </head>
 <nav th:replace="~{fragments/navbar.html}"></nav>
 <body class="d-flex flex-column min-vh-100">
-<div class="container">
+<div class="col-6 container flex-grow-1">
     <h1 class="text-center mt-4">Deleted Products:</h1>
 
     <div class="row row-cols-1 row-cols-md-4">
         <div class="col mb-4" th:each="product : ${products}">
             <div class="card h-100 d-flex flex-column">
 
-                <span th:if="${product.imageLocation != null}">
-                    <img th:src="@{'/images/' + ${product.imageLocation}}"
-                         class="card-img-top img-fluid img-thumbnail"/>
-                </span>
+                    <span th:if="${product.imageLocation != null}">
+                        <img th:src="@{'/images/' + ${product.imageLocation}}"
+                             class="card-img-top img-fluid img-thumbnail"/>
+                    </span>
 
                 <div class="card-body flex-grow-1 text-center">
-                     <span th:if="${product.name != null}">
-                        <h5 class="card-title" th:text="${product.name}">Product Name</h5>
-                    </span>
+                         <span th:if="${product.name != null}">
+                            <h5 class="card-title" th:text="${product.name}">Product Name</h5>
+                        </span>
                     <p class="card-text text-danger" th:text="${product.price +'лв.'}">Price: $0.00</p>
                 </div>
 
@@ -33,7 +33,7 @@
                         <a th:href="@{'/products/show/deleted/' + ${product.id}}" class="btn btn-primary">Show more</a>
                     </div>
                     <div>
-<!--                        <a th:href="@{'/products/edit?id=' + ${product.id}}" class="btn btn-warning">Edit</a>-->
+                        <!--                        <a th:href="@{'/products/edit?id=' + ${product.id}}" class="btn btn-warning">Edit</a>-->
                         <a th:href="@{'/products/undelete?id=' + ${product.id}}" class="btn btn-danger">Add Back to Stock</a>
                     </div>
                 </div>
@@ -41,7 +41,6 @@
             </div>
         </div>
     </div>
-
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
