--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -63,6 +63,7 @@
                                 Search products &raquo;
                             </a>
                             <ul class="dropdown-menu dropdown-submenu">
+                                <li><a class="dropdown-item" th:href="@{/products/searchByPrice}">By price</a></li>
                                 <li><a class="dropdown-item" th:href="@{/products/searchByQuantity}">By quantity</a></li>
                             </ul>
                         </li>
