Bug fixed when adding new accessories

--- a/src/main/resources/templates/product_add.html
+++ b/src/main/resources/templates/product_add.html
@@ -118,7 +118,7 @@
                         </select>
                     </div>
                 </div>
-                <div th:if="${productType == 'Accessory'}">
+                <div th:if="${productType == 'Accessories'}">
                     <div class="form-group">
                         <label for="colorAccessory">Color:</label>
                         <select th:field="*{color}" class="form-select" id="colorAccessory">
