Modified page names

--- a/src/main/resources/templates/404_page_not_found.html
+++ b/src/main/resources/templates/404_page_not_found.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="~{fragments/head.html(title='Not found')}"></head>
+<head th:replace="~{fragments/head.html(title='Page Not found')}"></head>
 <nav th:replace="~{fragments/navbar.html}"></nav>
 
 <body class="d-flex flex-column min-vh-100">
