--- a/src/main/resources/templates/product_add.html
+++ b/src/main/resources/templates/product_add.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 
-<head th:replace="~{fragments/head.html(title='Task')}"></head>
+<head th:replace="~{fragments/head.html(title='Add product')}"></head>
 <nav th:insert="~{fragments/navbar.html}"></nav>
 
 
