--- a/src/main/resources/templates/search_by_price.html
+++ b/src/main/resources/templates/search_by_price.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.w3.org/1999/xhtml">
-<head th:replace="~{fragments/head.html(title='Products')}"></head>
+<head th:replace="~{fragments/head.html(title='Search')}"></head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
