--- a/src/main/resources/templates/upload_test.html
+++ b/src/main/resources/templates/upload_test.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="~{fragments/head.html(title='yo')}"></head>
+<head th:replace="~{fragments/head.html(title='Upload')}"></head>
 <nav th:replace="~{fragments/navbar.html}"></nav>
 
 <body class="d-flex flex-column min-vh-100">
